--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
     "parcel": "^2.8.3",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "sass": "^1.58.0"
+
   },
   "dependencies": {
     "core-js": "^3.27.2",
     "fracty": "^1.0.11",
     "regenerator-runtime": "^0.13.11",
-    "sass": "^1.58.0"
   }
 }
